@@ -28,6 +28,7 @@ Created 5/7/1996 Heikki Tuuri
 #include "univ.i"
 #include "buf0types.h"
 #include "trx0types.h"
+#include "mtr0types.h"
 #include "rem0types.h"
 #include "dict0types.h"
 #include "que0types.h"
@@ -288,10 +289,11 @@ lock_rec_insert_check_and_lock(
 				DB_DEADLOCK, or DB_QUE_THR_SUSPENDED */
 	ulint		flags,	/* in: if BTR_NO_LOCKING_FLAG bit is
 				set, does nothing */
-	rec_t*		rec,	/* in: record after which to insert */
+	const rec_t*	rec,	/* in: record after which to insert */
 	buf_block_t*	block,	/* in/out: buffer block of rec */
 	dict_index_t*	index,	/* in: index */
 	que_thr_t*	thr,	/* in: query thread */
+	mtr_t*		mtr,	/* in/out: mini-transaction */
 	ibool*		inherit);/* out: set to TRUE if the new
 				inserted record maybe should inherit
 				LOCK_GAP type locks from the successor
@@ -330,13 +332,14 @@ lock_sec_rec_modify_check_and_lock(
 	ulint		flags,	/* in: if BTR_NO_LOCKING_FLAG
 				bit is set, does nothing */
 	buf_block_t*	block,	/* in/out: buffer block of rec */
-	rec_t*		rec,	/* in: record which should be
+	const rec_t*	rec,	/* in: record which should be
 				modified; NOTE: as this is a secondary
 				index, we always have to modify the
 				clustered index record first: see the
 				comment below */
 	dict_index_t*	index,	/* in: secondary index */
-	que_thr_t*	thr);	/* in: query thread */
+	que_thr_t*	thr,	/* in: query thread */
+	mtr_t*		mtr);	/* in/out: mini-transaction */
 /*************************************************************************
 Like the counterpart for a clustered index below, but now we read a
 secondary index record. */
